Hoc DB va Entity FW

--- a/HelloDotNet/HelloDotNetWeb/Web.config
+++ b/HelloDotNet/HelloDotNetWeb/Web.config
@@ -72,4 +72,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="HelloDotNetDBConnectionString" connectionString="Data Source=.\SQL2012;Initial Catalog=HelloDotNet;integrated security=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
