--- a/HelloDotNet/HelloDotNetWeb/HelloDotNetWeb.csproj
+++ b/HelloDotNet/HelloDotNetWeb/HelloDotNetWeb.csproj
@@ -158,7 +158,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Cores\Entities\Category.cs" />
     <Compile Include="Cores\Entities\Product.cs" />
+    <Compile Include="Cores\HelloDotNetDB.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
